--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									<a class="main-nav__link" href="#" target="_self">Правила</a>
 								</li>
 								<li class="main-nav__item">
-									<a class="main-nav__link" href="#" target="_self">Галерея работ</a>
+									<a class="main-nav__link" href="gallery.html" target="_self">Галерея работ</a>
 								</li>
 							</ul>
 						</div>
