--- a/event.html
+++ b/event.html
@@ -39,131 +39,71 @@
 				</ul>
 			</nav>
 		</header>
-		<!--Sidebar with logo and path to tip page-->
-		<div class="sidebar">
-			<!--Логотип фильма-->
-			<div class="sidebar__logo">
-				<a class="sidebar__link" href="#" target="_self">
-					<picture class="sidebar__frame">
-						<source srcset="img/film-logo.webp" type="image/webp" />
-						<img class="sidebar__image" src="img/film-logo.png" alt="Волшебный парк Джун" />
-					</picture>
-				</a>
-				<span class="sidebar__date">В кино с 21 марта</span>
-				<span class="sidebar__type">в 2D и 3D</span>
-			</div>
-		</div>
 		<!--Page main part-->
 		<main class="main">
-      <section class="main__intro intro">
+      <div class="main__middle">
         <h2 class="visually-hidden">Секция логотипа, навигации и личного кабинета</h2>
         <!--Блок логотипа-->
-        <div class="intro__logo">
-          <a class="intro__link" href="#" target="_self">
-            <picture class="intro__frame">
+        <header class="main__header main-header">
+          <a class="main-header__link" href="#" target="_self">
+            <picture class="main-header__frame">
               <source srcset="img/film-logo-event.webp" type="image/webp" />
-              <img class="intro__image" src="img/film-logo-event.png" alt="Волшебный парк Джун" />
+              <img class="main-header__image" src="img/film-logo-event.png" alt="Волшебный парк Джун" />
             </picture>
           </a>
-          <span class="intro__date">В кино с 21 марта</span>
-          <span class="intro__type">в 2D и 3D</span>
-        </div>
+          <span class="main-header__date">В кино с 21 марта</span>
+          <span class="main-header__type">в 2D и 3D</span>
+        </header>
         <!--Блок управляющих кнопок-->
-        <div class="intro__controls intro-nav">
-          <!--Скрытая кнопка "на главную"-->
-          <a class="intro-nav__btn intro-nav__btn--index" href="index.html" target="_self">
-            <span class="intro-controls__text">На главную</span>
-          </a>
-          <!--Блок кнопки и списка "Фильм"-->
-          <div class="intro-nav__wrapper intro-nav__wrapper--film">
-            <button class="intro-nav__btn intro-nav__btn--film" type="button">
-              <span class="intro-controls__text">Фильм</span>
-            </button>
-            <ul class="intro-nav__list intro-nav__list--film">
-              <li class="intro-nav__item">
-                <a class="intro-nav__link" href="#" target="_self">Трейлер</a>
-              </li>
-              <li class="intro-nav__item">
-                <a class="intro-nav__link" href="#" target="_self">Видео</a>
-              </li>
-              <li class="intro-nav__item">
-                <a class="intro-nav__link" href="#" target="_self">Персонажи</a>
-              </li>
-            </ul>
-          </div>
-          <!--Блок кнопки и списка "Конкурс"-->
-          <div class="intro-nav__wrapper intro-nav__wrapper--event">
-            <button class="intro-nav__btn intro-nav__btn--event" type="button">
-              <span class="intro-controls__text">Фильм</span>
-            </button>
-            <ul class="intro-nav__list intro-nav__list--event">
-              <li class="intro-nav__item">
-                <a class="intro-nav__link" href="#" target="_self">Как участвовать?</a>
-              </li>
-              <li class="intro-nav__item">
-                <a class="intro-nav__link" href="#" target="_self">Призы</a>
-              </li>
-              <li class="intro-nav__item">
-                <a class="intro-nav__link" href="#" target="_self">Правила</a>
-              </li>
-              <li class="intro-nav__item">
-                <a class="intro-nav__link" href="#" target="_self">Галерея работ</a>
-              </li>
-            </ul>
-          </div>
-          <!--Кнопка Вход/Регистрация, доступна только, если юзер закрыл попап Вход/Регистрация-->
-          <button class="main-nav__enter" type="button">Регистрация/Вход</button>
+        <div class="main-header__controls main-nav">
+					<div class="main-nav__container">
+	          <!--кнопка "на главную"-->
+	          <a class="main-nav__btn main-nav__btn--index" href="index.html" target="_self">
+	            <span class="main-nav__text">На главную</span>
+	          </a>
+	          <!--Блок кнопки и списка "Фильм"-->
+	          <div class="main-nav__wrapper main-nav__wrapper--film">
+	            <button class="main-nav__btn main-nav__btn--film" type="button">
+	              <span class="main-nav__text">Фильм</span>
+	            </button>
+	            <ul class="main-nav__list main-nav__list--film">
+	              <li class="main-nav__item">
+	                <a class="main-nav__link" href="#" target="_self">Трейлер</a>
+	              </li>
+	              <li class="main-nav__item">
+	                <a class="main-nav__link" href="#" target="_self">Видео</a>
+	              </li>
+	              <li class="main-nav__item">
+	                <a class="main-nav__link" href="#" target="_self">Персонажи</a>
+	              </li>
+	            </ul>
+	          </div>
+	          <!--Блок кнопки и списка "Конкурс"-->
+	          <div class="main-nav__wrapper main-nav__wrapper--event">
+	            <button class="main-nav__btn main-nav__btn--event" type="button">
+	              <span class="main-nav__text">Фильм</span>
+	            </button>
+	            <ul class="main-nav__list main-nav__list--event">
+	              <li class="main-nav__item">
+	                <a class="main-nav__link" href="#" target="_self">Как участвовать?</a>
+	              </li>
+	              <li class="main-nav__item">
+	                <a class="main-nav__link" href="#" target="_self">Призы</a>
+	              </li>
+	              <li class="main-nav__item">
+	                <a class="main-nav__link" href="#" target="_self">Правила</a>
+	              </li>
+	              <li class="main-nav__item">
+	                <a class="main-nav__link" href="gallery.html" target="_self">Галерея работ</a>
+	              </li>
+	            </ul>
+	          </div>
+	          <!--Кнопка Вход/Регистрация, доступна только, если юзер закрыл попап Вход/Регистрация-->
+	          <button class="main-nav__enter" type="button">Регистрация/Вход</button>
+					</div>
+					<p class="main-nav__description">Хочешь попасть в крутой парк аттракционов Nickelodeon Land Madrid? Участвуй в творческом конкурсе! Нарисуй аттракцион своей мечты и загрузи свою работу на сайт. Автор самого оригинального рисунка выиграет поездку для всей семьи в наш парк развлечений в Испании.</p>
         </div>
-      </section>
-			<!--Header part - buttons + personal area-->
-			<header class="main__header main-header">
-				<!--Блок кнопок-->
-				<div class="main-header__controls main-nav">
-					<!--Скрытая кнопка "на главную"-->
-					<a class="main-nav__btn main-nav__btn--index" href="index.html" target="_self">
-						<span class="main-controls__text">На главную</span>
-					</a>
-          <!--Блок кнопки и списка "Фильм"-->
-					<div class="main-nav__wrapper main-nav__wrapper--film">
-						<button class="main-nav__btn main-nav__btn--film" type="button">
-							<span class="main-controls__text">Фильм</span>
-						</button>
-						<ul class="main-nav__list main-nav__list--film">
-							<li class="main-nav__item">
-								<a class="main-nav__link" href="#" target="_self">Трейлер</a>
-							</li>
-							<li class="main-nav__item">
-								<a class="main-nav__link" href="#" target="_self">Видео</a>
-							</li>
-							<li class="main-nav__item">
-								<a class="main-nav__link" href="#" target="_self">Персонажи</a>
-							</li>
-						</ul>
-					</div>
-					<!--Блок кнопки и списка "Конкурс"-->
-					<div class="main-nav__wrapper main-nav__wrapper--event">
-						<button class="main-nav__btn main-nav__btn--event" type="button">
-							<span class="main-controls__text">Фильм</span>
-						</button>
-						<ul class="main-nav__list main-nav__list--event">
-							<li class="main-nav__item">
-								<a class="main-nav__link" href="#" target="_self">Как участвовать?</a>
-							</li>
-							<li class="main-nav__item">
-								<a class="main-nav__link" href="#" target="_self">Призы</a>
-							</li>
-							<li class="main-nav__item">
-								<a class="main-nav__link" href="#" target="_self">Правила</a>
-							</li>
-							<li class="main-nav__item">
-								<a class="main-nav__link" href="#" target="_self">Галерея работ</a>
-							</li>
-						</ul>
-					</div>
-					<!--Кнопка Вход/Регистрация, доступна только, если юзер закрыл попап Вход/Регистрация-->
-					<button class="main-nav__enter" type="button">Регистрация/Вход</button>
-				</div>
-				<!--Область личного кабинета-->
+				<!--Блок Учетной записи-->
 				<div class="main-header__cabinet main-cabinet">
 					<div class="main-cabinet__avatar">
 						<button class="main-cabinet__close" type="button"></button>
@@ -264,81 +204,52 @@
 						<span class="main-cabinet__text">Участвовать в конкурсе</span>
 					</a>
 				</div>
-			</header>
-			<!--Секция-->
-			<section class="main__content main-content">
-				<h1 class="main-content__title main-content__title--tips">Пропустил символ? Не беда! Вопрос - это подсказка, читай внимательно и выбирай символ.</h1>
-        <b class="main-content__question">Это два персонажа, которые похожи друг на друга</b>
-				<div class="main-content__wrapper content-wrapper">
-					<div class="content-wrapper__item content-wrapper__item--first">
-						<!--Пустой невыбранный квадрат с символом-->
-						<picture class="content-wrapper__frame content-wrapper__frame--empty">
-							<source scrset="img/symbol-empty-1.webp" type="image/webp" />
-							<img class="content-wrapper__image" src="img/symbol-empty-1.png" alt="Символ #1" />
-						</picture>
-						<!--Выбранный квадрат с символом-->
-						<picture class="content-wrapper__frame content-wrapper__frame--active">
-							<source scrset="img/symbol-active-1.webp" type="image/webp" />
-							<img class="content-wrapper__image" src="img/symbol-active-1.png" alt="Символ #1" />
-						</picture>
+				<!--Секция-->
+				<section class="main__upload main-upload">
+					<div class="main-upload__wrapper">
+						<div class="main-upload__details">
+							<img class="main-upload__avatar" src="img/upload-avatar.png" alt="Avatar-1" />
+							<b class="main-upload__name">Анатолий М.</b>
+						</div>
+						<form class="main-upload__form upload-form" method="post" action="#">
+							<p class="upload-form__description">Чтобы отправить свой рисунок на конкурс, перетащи его сюда или нажми кнопку ниже</p>
+								<input type="file" name="file" id="file" class="upload-form__input inputfile" />
+								<label class="upload-form__label" for="file">Выбрать рисунок</label>
+							<button class="upload-form__submit" type="submit">Отправить</button>
+						</form>
 					</div>
-					<div class="content-wrapper__item content-wrapper__item--second">
-						<!--Пустой невыбранный квадрат с символом-->
-						<picture class="content-wrapper__frame content-wrapper__frame--empty">
-							<source scrset="img/symbol-empty-2.webp" type="image/webp" />
-							<img class="content-wrapper__image" src="img/symbol-empty-2.png" alt="Символ #2" />
-						</picture>
-						<!--Выбранный квадрат с символом-->
-						<picture class="content-wrapper__frame content-wrapper__frame--active">
-							<source scrset="img/symbol-active-2.webp" type="image/webp" />
-							<img class="content-wrapper__image" src="img/symbol-active-2.png" alt="Символ #2" />
-						</picture>
+					<!--Выдвигающаяся панель про участие-->
+					<div class="main-upload__slide main-content__slide slide-panel">
+						<button class="open-btn" type="button"><span class="btn-span">Как участвовать</span></button>
+						<div class="top-panel">
+							<button class="top-panel__close" type="button"></button>
+							<ul class="top-panel__list panel-list">
+								<li class="panel-list__item">
+									<span class="panel-list__text">1. Смотри Nickelodeon каждый день с 9:00 до 19:00 МСК</span>
+								</li>
+								<li class="panel-list__item">
+									<span class="panel-list__text">2. Лови появляющиеся символы</span>
+								</li>
+								<li class="panel-list__item">
+									<span class="panel-list__text">3. Выбери правильные на сайте</span>
+								</li>
+								<li class="panel-list__item">
+									<span class="panel-list__text">4. Выиграй билеты в кино</span>
+								</li>
+								<li class="panel-list__item">
+									<span class="panel-list__text">5. Набери 7 символов</span>
+								</li>
+								<li class="panel-list__item">
+									<span class="panel-list__text">6. Нарисуй аттракцион мечты</span>
+								</li>
+								<li class="panel-list__item">
+									<span class="panel-list__text">7. Выиграй путешествие в Nickelodeon Land Madrid</span>
+								</li>
+							</ul>
+						</div>
 					</div>
-					<div class="content-wrapper__item content-wrapper__item--third">
-						<!--Пустой невыбранный квадрат с символом-->
-						<picture class="content-wrapper__frame content-wrapper__frame--empty">
-							<source scrset="img/symbol-empty-3.webp" type="image/webp" />
-							<img class="content-wrapper__image" src="img/symbol-empty-3.png" alt="Символ #3" />
-						</picture>
-						<!--Выбранный квадрат с символом-->
-						<picture class="content-wrapper__frame content-wrapper__frame--active">
-							<source scrset="img/symbol-active-3.webp" type="image/webp" />
-							<img class="content-wrapper__image" src="img/symbol-active-3.png" alt="Символ #3" />
-						</picture>
-					</div>
-				</div>
-				<button class="main-content__submit" type="submit">Выбрать</button>
-				<!--Выдвигающаяся панель про участие-->
-				<div class="main-content__slide slide-panel">
-					<button class="open-btn" type="button"><span class="btn-span">Как участвовать</span></button>
-					<div class="top-panel">
-						<button class="top-panel__close" type="button"></button>
-						<ul class="top-panel__list panel-list">
-							<li class="panel-list__item">
-								<span class="panel-list__text">1. Смотри Nickelodeon каждый день с 9:00 до 19:00 МСК</span>
-							</li>
-							<li class="panel-list__item">
-								<span class="panel-list__text">2. Лови появляющиеся символы</span>
-							</li>
-							<li class="panel-list__item">
-								<span class="panel-list__text">3. Выбери правильные на сайте</span>
-							</li>
-							<li class="panel-list__item">
-								<span class="panel-list__text">4. Выиграй билеты в кино</span>
-							</li>
-							<li class="panel-list__item">
-								<span class="panel-list__text">5. Набери 7 символов</span>
-							</li>
-							<li class="panel-list__item">
-								<span class="panel-list__text">6. Нарисуй аттракцион мечты</span>
-							</li>
-							<li class="panel-list__item">
-								<span class="panel-list__text">7. Выиграй путешествие в Nickelodeon Land Madrid</span>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</section>
+				</section>
+			</div>
 		</main>
 		<!--Page footer-->
 		<footer class="footer">
@@ -371,6 +282,19 @@
 				</ul>
 			</div>
 		</footer>
+	</div>
+	<!--Попап удачной загрузки-->
+	<div class="popup-upload">
+		<!--Удачная загрузка-->
+		<div class="popup-upload__success success-upload">
+			<p class="success-upload__description">Мы получили твой рисунок на конкурс.</p>
+			<p class="success-upload__description">Скоро он появится в галерее.</p>
+		</div>
+		<!--Неудачная загрузка-->
+		<div class="popup-upload__unsuccess unsuccess-upload">
+			<p class="unsuccess-upload__description">Загрузка рисунка не удалась.</p>
+			<p class="unsuccess-upload__description">Попробуй загрузить рисунок ещё раз!</p>
+		</div>
 	</div>
 	<script src="js/script.js"></script>
 </body>
