--- a/tip.html
+++ b/tip.html
@@ -63,7 +63,7 @@
 						<!--Блок кнопки и списка "Фильм"-->
 						<div class="main-nav__wrapper main-nav__wrapper--film">
 							<button class="main-nav__btn main-nav__btn--film" type="button">
-								<span class="main-controls__text">Фильм</span>
+								<span class="main-nav__text">Фильм</span>
 							</button>
 							<ul class="main-nav__list main-nav__list--film">
 								<li class="main-nav__item">
@@ -80,7 +80,7 @@
 						<!--Блок кнопки и списка "Конкурс"-->
 						<div class="main-nav__wrapper main-nav__wrapper--event">
 							<button class="main-nav__btn main-nav__btn--event" type="button">
-								<span class="main-controls__text">Фильм</span>
+								<span class="main-nav__text">Фильм</span>
 							</button>
 							<ul class="main-nav__list main-nav__list--event">
 								<li class="main-nav__item">
@@ -93,7 +93,7 @@
 									<a class="main-nav__link" href="#" target="_self">Правила</a>
 								</li>
 								<li class="main-nav__item">
-									<a class="main-nav__link" href="#" target="_self">Галерея работ</a>
+									<a class="main-nav__link" href="gallery.html" target="_self">Галерея работ</a>
 								</li>
 							</ul>
 						</div>
