--- a/tip.html
+++ b/tip.html
@@ -57,9 +57,9 @@
 			</div>
 			<div class="main__middle">
 				<!--Header part - buttons + personal area-->
-				<header class="main__header main-header">
+				<div class="main__header main-header">
 					<!--Блок кнопок-->
-					<div class="main-header__controls main-nav">
+					<div class="main-header__nav main-nav">
 						<!--Блок кнопки и списка "Фильм"-->
 						<div class="main-nav__wrapper main-nav__wrapper--film">
 							<button class="main-nav__btn main-nav__btn--film" type="button">
@@ -201,7 +201,7 @@
 							<span class="main-cabinet__text">Участвовать в конкурсе</span>
 						</a>
 					</div>
-				</header>
+				</div>
 				<!--Секция основного контента для выбора правильного контента-->
 				<section class="main__content main-content">
 					<h1 class="main-content__title main-content__title--tips">Пропустил символ? Не беда! Вопрос - это подсказка, читай внимательно и выбирай символ.</h1>
