--- a/event.html
+++ b/event.html
@@ -19,7 +19,7 @@
 	<![endif]-->
 </head>
 
-<body class="body-tip">
+<body class="body-event">
 	<div class="wrapper">
 		<!--Page header-->
 		<header class="header">
@@ -41,70 +41,70 @@
 		</header>
 		<!--Page main part-->
 		<main class="main">
-      <div class="main__middle">
-        <h2 class="visually-hidden">Секция логотипа, навигации и личного кабинета</h2>
-        <!--Блок логотипа-->
-        <header class="main__header main-header">
-          <a class="main-header__link" href="#" target="_self">
-            <picture class="main-header__frame">
-              <source srcset="img/film-logo-event.webp" type="image/webp" />
-              <img class="main-header__image" src="img/film-logo-event.png" alt="Волшебный парк Джун" />
-            </picture>
-          </a>
-          <span class="main-header__date">В кино с 21 марта</span>
-          <span class="main-header__type">в 2D и 3D</span>
-        </header>
-        <!--Блок управляющих кнопок-->
-        <div class="main-header__controls main-nav">
+			<div class="main__upper">
+				<!--Блок логотипа-->
+				<div class="main__logo main-logo">
+					<a class="main-logo__link" href="#" target="_self">
+						<picture class="main-logo__frame">
+							<source srcset="img/film-logo-event.webp" type="image/webp" />
+							<img class="main-logo__image" src="img/film-logo-event.png" alt="Волшебный парк Джун" />
+						</picture>
+					</a>
+					<span class="main-logo__date">В кино с 21 марта</span>
+					<span class="main-logo__type">в 2D и 3D</span>
+				</div>
+				<!--Блок управляющих кнопок-->
+				<div class="main__nav main-nav">
 					<div class="main-nav__container">
-	          <!--кнопка "на главную"-->
-	          <a class="main-nav__btn main-nav__btn--index" href="index.html" target="_self">
+						<!--кнопка "на главную"-->
+						<a class="main-nav__btn main-nav__btn--index" href="index.html" target="_self">
 	            <span class="main-nav__text">На главную</span>
 	          </a>
-	          <!--Блок кнопки и списка "Фильм"-->
-	          <div class="main-nav__wrapper main-nav__wrapper--film">
-	            <button class="main-nav__btn main-nav__btn--film" type="button">
+						<!--Блок кнопки и списка "Фильм"-->
+						<div class="main-nav__wrapper main-nav__wrapper--film">
+							<button class="main-nav__btn main-nav__btn--film" type="button">
 	              <span class="main-nav__text">Фильм</span>
 	            </button>
-	            <ul class="main-nav__list main-nav__list--film">
-	              <li class="main-nav__item">
-	                <a class="main-nav__link" href="#" target="_self">Трейлер</a>
-	              </li>
-	              <li class="main-nav__item">
-	                <a class="main-nav__link" href="#" target="_self">Видео</a>
-	              </li>
-	              <li class="main-nav__item">
-	                <a class="main-nav__link" href="#" target="_self">Персонажи</a>
-	              </li>
-	            </ul>
-	          </div>
-	          <!--Блок кнопки и списка "Конкурс"-->
-	          <div class="main-nav__wrapper main-nav__wrapper--event">
-	            <button class="main-nav__btn main-nav__btn--event" type="button">
+							<ul class="main-nav__list main-nav__list--film">
+								<li class="main-nav__item">
+									<a class="main-nav__link" href="#" target="_self">Трейлер</a>
+								</li>
+								<li class="main-nav__item">
+									<a class="main-nav__link" href="#" target="_self">Видео</a>
+								</li>
+								<li class="main-nav__item">
+									<a class="main-nav__link" href="#" target="_self">Персонажи</a>
+								</li>
+							</ul>
+						</div>
+						<!--Блок кнопки и списка "Конкурс"-->
+						<div class="main-nav__wrapper main-nav__wrapper--event">
+							<button class="main-nav__btn main-nav__btn--event" type="button">
 	              <span class="main-nav__text">Фильм</span>
 	            </button>
-	            <ul class="main-nav__list main-nav__list--event">
-	              <li class="main-nav__item">
-	                <a class="main-nav__link" href="#" target="_self">Как участвовать?</a>
-	              </li>
-	              <li class="main-nav__item">
-	                <a class="main-nav__link" href="#" target="_self">Призы</a>
-	              </li>
-	              <li class="main-nav__item">
-	                <a class="main-nav__link" href="#" target="_self">Правила</a>
-	              </li>
-	              <li class="main-nav__item">
-	                <a class="main-nav__link" href="gallery.html" target="_self">Галерея работ</a>
-	              </li>
-	            </ul>
-	          </div>
-	          <!--Кнопка Вход/Регистрация, доступна только, если юзер закрыл попап Вход/Регистрация-->
-	          <button class="main-nav__enter" type="button">Регистрация/Вход</button>
+							<ul class="main-nav__list main-nav__list--event">
+								<li class="main-nav__item">
+									<a class="main-nav__link" href="#" target="_self">Как участвовать?</a>
+								</li>
+								<li class="main-nav__item">
+									<a class="main-nav__link" href="#" target="_self">Призы</a>
+								</li>
+								<li class="main-nav__item">
+									<a class="main-nav__link" href="#" target="_self">Правила</a>
+								</li>
+								<li class="main-nav__item">
+									<a class="main-nav__link" href="gallery.html" target="_self">Галерея работ</a>
+								</li>
+							</ul>
+						</div>
+						<!--Кнопка Вход/Регистрация, доступна только, если юзер закрыл попап Вход/Регистрация-->
+						<button class="main-nav__enter" type="button">Регистрация/Вход</button>
 					</div>
-					<p class="main-nav__description">Хочешь попасть в крутой парк аттракционов Nickelodeon Land Madrid? Участвуй в творческом конкурсе! Нарисуй аттракцион своей мечты и загрузи свою работу на сайт. Автор самого оригинального рисунка выиграет поездку для всей семьи в наш парк развлечений в Испании.</p>
-        </div>
+					<p class="main-nav__description">Хочешь попасть в крутой парк аттракционов Nickelodeon Land Madrid? Участвуй в творческом конкурсе! Нарисуй аттракцион своей мечты и загрузи свою работу на сайт. Автор самого оригинального рисунка выиграет поездку для всей семьи в наш парк развлечений
+						в Испании.</p>
+				</div>
 				<!--Блок Учетной записи-->
-				<div class="main-header__cabinet main-cabinet">
+				<div class="main__cabinet main-cabinet">
 					<div class="main-cabinet__avatar">
 						<button class="main-cabinet__close" type="button"></button>
 						<picture class="main-cabinet__frame">
@@ -204,52 +204,52 @@
 						<span class="main-cabinet__text">Участвовать в конкурсе</span>
 					</a>
 				</div>
-				<!--Секция-->
-				<section class="main__upload main-upload">
-					<div class="main-upload__wrapper">
-						<div class="main-upload__details">
-							<img class="main-upload__avatar" src="img/upload-avatar.png" alt="Avatar-1" />
-							<b class="main-upload__name">Анатолий М.</b>
-						</div>
-						<form class="main-upload__form upload-form" method="post" action="#">
-							<p class="upload-form__description">Чтобы отправить свой рисунок на конкурс, перетащи его сюда или нажми кнопку ниже</p>
-								<input type="file" name="file" id="file" class="upload-form__input inputfile" />
-								<label class="upload-form__label" for="file">Выбрать рисунок</label>
-							<button class="upload-form__submit" type="submit">Отправить</button>
-						</form>
-					</div>
-					<!--Выдвигающаяся панель про участие-->
-					<div class="main-upload__slide main-content__slide slide-panel">
-						<button class="open-btn" type="button"><span class="btn-span">Как участвовать</span></button>
-						<div class="top-panel">
-							<button class="top-panel__close" type="button"></button>
-							<ul class="top-panel__list panel-list">
-								<li class="panel-list__item">
-									<span class="panel-list__text">1. Смотри Nickelodeon каждый день с 9:00 до 19:00 МСК</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">2. Лови появляющиеся символы</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">3. Выбери правильные на сайте</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">4. Выиграй билеты в кино</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">5. Набери 7 символов</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">6. Нарисуй аттракцион мечты</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">7. Выиграй путешествие в Nickelodeon Land Madrid</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</section>
 			</div>
+			<!--Секция-->
+			<section class="main__upload main-upload">
+				<div class="main-upload__wrapper">
+					<div class="main-upload__details">
+						<img class="main-upload__avatar" src="img/upload-avatar.png" alt="Avatar-1" />
+						<b class="main-upload__name">Анатолий М.</b>
+					</div>
+					<form class="main-upload__form upload-form" method="post" action="#">
+						<p class="upload-form__description">Чтобы отправить свой рисунок на конкурс, перетащи его сюда или нажми кнопку ниже</p>
+						<input type="file" name="file" id="file" class="upload-form__input inputfile" />
+						<label class="upload-form__label" for="file">Выбрать рисунок</label>
+						<button class="upload-form__submit" type="submit">Отправить</button>
+					</form>
+				</div>
+				<!--Выдвигающаяся панель про участие-->
+				<div class="main-upload__slide main-content__slide slide-panel">
+					<button class="open-btn" type="button"><span class="btn-span">Как участвовать</span></button>
+					<div class="top-panel">
+						<button class="top-panel__close" type="button"></button>
+						<ul class="top-panel__list panel-list">
+							<li class="panel-list__item">
+								<span class="panel-list__text">1. Смотри Nickelodeon каждый день с 9:00 до 19:00 МСК</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">2. Лови появляющиеся символы</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">3. Выбери правильные на сайте</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">4. Выиграй билеты в кино</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">5. Набери 7 символов</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">6. Нарисуй аттракцион мечты</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">7. Выиграй путешествие в Nickelodeon Land Madrid</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 		</main>
 		<!--Page footer-->
 		<footer class="footer">
