--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 				</div>
 			</div>
 			<div class="main__middle">
-				<header class="main__header main-header">
+				<div class="main__header main-header">
 					<!--Блок кнопок-->
-					<div class="main-header__controls main-nav">
+					<div class="main-header__nav main-nav">
 						<!--Блок кнопки и списка "Фильм"-->
 						<div class="main-nav__wrapper main-nav__wrapper--film">
 							<button class="main-nav__btn main-nav__btn--film" type="button">
@@ -215,7 +215,7 @@
 							<span class="main-cabinet__text">Участвовать в конкурсе</span>
 						</a>
 					</div>
-				</header>
+				</div>
 				<!--Секция основного контента для выбора правильного контента-->
 				<section class="main__content main-content">
 					<h1 class="main-content__title">Смотри Nickelodeon сегодня в <span class="main-content__time">XX:XX</span> и <span class="main-content__time">XX:XX</span>, чтобы узнать верный символ</h1>
@@ -528,7 +528,8 @@
 						<source srcset="img/char-1.webp" type="image/webp" />
 						<img class="chars-item__img" src="img/char-1.png" alt="Джун" />
 					</picture>
-					<p class="chars-item__description">12-летняя Джун - фантазёрка и мечтательница с богатым воображением. Вместе со своей изобретательной мамой она создала собственный фантазийный, самый-самый лучший парк развлечений - Волшебный парк Джун. У Джун есть талант созидания, её сильные стороны - математика, инженерия и строительство. После того как её мама заболевает и отправляется на лечение, героиня теряет уверенность в своих силах и интерес к парку.</p>
+					<p class="chars-item__description">12-летняя Джун - фантазёрка и мечтательница с богатым воображением. Вместе со своей изобретательной мамой она создала собственный фантазийный, самый-самый лучший парк развлечений - Волшебный парк Джун. У Джун есть талант созидания, её сильные стороны
+						- математика, инженерия и строительство. После того как её мама заболевает и отправляется на лечение, героиня теряет уверенность в своих силах и интерес к парку.</p>
 				</div>
 				<!---->
 				<div class="chars-slider__item chars-item">
@@ -537,7 +538,8 @@
 						<source srcset="img/char-1.webp" type="image/webp" />
 						<img class="chars-item__img" src="img/char-1.png" alt="Джун" />
 					</picture>
-					<p class="chars-item__description">12-летняя Джун - фантазёрка и мечтательница с богатым воображением. Вместе со своей изобретательной мамой она создала собственный фантазийный, самый-самый лучший парк развлечений - Волшебный парк Джун. У Джун есть талант созидания, её сильные стороны - математика, инженерия и строительство. После того как её мама заболевает и отправляется на лечение, героиня теряет уверенность в своих силах и интерес к парку.</p>
+					<p class="chars-item__description">12-летняя Джун - фантазёрка и мечтательница с богатым воображением. Вместе со своей изобретательной мамой она создала собственный фантазийный, самый-самый лучший парк развлечений - Волшебный парк Джун. У Джун есть талант созидания, её сильные стороны
+						- математика, инженерия и строительство. После того как её мама заболевает и отправляется на лечение, героиня теряет уверенность в своих силах и интерес к парку.</p>
 				</div>
 				<!---->
 				<div class="chars-slider__item chars-item">
@@ -546,7 +548,8 @@
 						<source srcset="img/char-1.webp" type="image/webp" />
 						<img class="chars-item__img" src="img/char-1.png" alt="Джун" />
 					</picture>
-					<p class="chars-item__description">12-летняя Джун - фантазёрка и мечтательница с богатым воображением. Вместе со своей изобретательной мамой она создала собственный фантазийный, самый-самый лучший парк развлечений - Волшебный парк Джун. У Джун есть талант созидания, её сильные стороны - математика, инженерия и строительство. После того как её мама заболевает и отправляется на лечение, героиня теряет уверенность в своих силах и интерес к парку.</p>
+					<p class="chars-item__description">12-летняя Джун - фантазёрка и мечтательница с богатым воображением. Вместе со своей изобретательной мамой она создала собственный фантазийный, самый-самый лучший парк развлечений - Волшебный парк Джун. У Джун есть талант созидания, её сильные стороны
+						- математика, инженерия и строительство. После того как её мама заболевает и отправляется на лечение, героиня теряет уверенность в своих силах и интерес к парку.</p>
 				</div>
 			</div>
 		</div>
