#scss-for-index

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<!--Блок кнопки и списка "Фильм"-->
 						<div class="main-nav__wrapper main-nav__wrapper--film">
 							<button class="main-nav__btn main-nav__btn--film" type="button">
-								<span class="main-controls__text">Фильм</span>
+								<span class="main-nav__text">Фильм</span>
 							</button>
 							<ul class="main-nav__list main-nav__list--film">
 								<li class="main-nav__item">
@@ -94,7 +94,7 @@
 						<!--Блок кнопки и списка "Конкурс"-->
 						<div class="main-nav__wrapper main-nav__wrapper--event">
 							<button class="main-nav__btn main-nav__btn--event" type="button">
-								<span class="main-controls__text">Фильм</span>
+								<span class="main-nav__text">Конкурс</span>
 							</button>
 							<ul class="main-nav__list main-nav__list--event">
 								<li class="main-nav__item">
