--- a/gallery.html
+++ b/gallery.html
@@ -508,22 +508,22 @@
 				<!--Social media block-->
 				<ul class="footer__social social-list">
 					<li class="social-list__item">
-						<a class="social-list__link social-list__link--yt" href="#" target="_blank"></a>
+						<a class="social-list__link social-list__link--yt" href="#" target="_blank"><i class="fab fa-youtube"></i></a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link social-list__link--fb" href="#" target="_blank"></a>
+						<a class="social-list__link social-list__link--fb" href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link social-list__link--vk" href="#" target="_blank"></a>
+						<a class="social-list__link social-list__link--vk" href="#" target="_blank"><i class="fab fa-vk"></i></a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link social-list__link--tw" href="#" target="_blank"></a>
+						<a class="social-list__link social-list__link--tw" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link social-list__link--in" href="#" target="_blank"></a>
+						<a class="social-list__link social-list__link--in" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link social-list__link--ok" href="#" target="_blank"></a>
+						<a class="social-list__link social-list__link--ok" href="#" target="_blank"><i class="fab fa-odnoklassniki"></i></a>
 					</li>
 				</ul>
 			</div>
