--- a/tip.html
+++ b/tip.html
@@ -46,13 +46,15 @@
 				<!--Логотип фильма-->
 				<div class="sidebar__logo">
 					<a class="sidebar__link" href="#" target="_self">
-						<picture class="sidebar__frame">
+						<picture class="sidebar__frame sidebar__frame--first">
 							<source srcset="img/film-logo.webp" type="image/webp" />
 							<img class="sidebar__image" src="img/film-logo.png" alt="Волшебный парк Джун" />
 						</picture>
+						<picture class="sidebar__frame sidebar__frame--second">
+							<source srcset="img/date-logo.webp" type="image/webp" />
+							<img class="sidebar__date" src="img/date-logo.png" alt="Дата выхода в кино - 21ое марта" />
+						</picture>
 					</a>
-					<span class="sidebar__date">В кино с 21 марта</span>
-					<span class="sidebar__type">в 2D и 3D</span>
 				</div>
 			</div>
 			<div class="main__middle">
