--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<img class="sidebar__image" src="img/film-logo.png" alt="Волшебный парк Джун" />
 						</picture>
 						<picture class="sidebar__frame sidebar__frame--second">
-							<source srcset="img/film-logo.webp" type="image/webp" />
+							<source srcset="img/date-logo.webp" type="image/webp" />
 							<img class="sidebar__date" src="img/date-logo.png" alt="Дата выхода в кино - 21ое марта" />
 						</picture>
 					</a>
